<resources>
    <string name="app_name">QuickMath</string>
    <string name="add">add</string>
    <string name="multiply">multiply</string>
    <string name="subtract">SUBTRACT</string>
    <string name="divide">divide</string>
    <string name="_5_questions">5 Questions</string>
    <string name="_10_questions">10 Questions</string>
    <string name="_15_questions">15 Questions</string>
    <string name="logout">LogOut</string>
    <string name="calculate">Calculate</string>
    <string name="plus">+</string>
    <string name="parent_s_email">Parent\'s Email</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="child_s_email">Child\'s Email</string>
    <string name="register">register</string>
    <string name="dashboard">Dashboard</string>
    <string name="administrator">Administrator:</string>
    <string name="child_results">Child Results</string>
    <string name="create_exam">Create Exam</string>
    <string name="questionOne">How Many Questions?</string>
    <string name="questionTwo">Select Your Operator:</string>
    <string name="addition">Addition</string>
    <string name="subtraction">Subtraction</string>
    <string name="multiplication">Multiplication</string>
    <string name="division">Division</string>
    <string name="submit">CREATE</string>
    <string name="quickmath">QuickMath</string>
    <string name="email_address">Email Address</string>
    <string name="login_password">Password</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign-Up</string>
    <string name="teacher_registration">Teacher Registration</string>
    <string name="cUName">Username</string>
    <string name="cRegPassword">Password</string>
    <string name="cRegFirst_name">First Name</string>
    <string name="cRegLast_name">Last Name</string>
    <string name="cReg_mm_dd_yy">mm/dd/yy</string>
    <string name="cRegRegister">register</string>
    <string name="cRegAge">Age</string>
    <string name="home">Home</string>
    <string name="enter_child_s_email">Enter Child\'s Email</string>
    <string name="result">Result:</string>
    <string name="graph">GRAPH</string>
    <string name="cResHome">HOME</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lbl_child_registration">Child Registration</string>
    <string name="lbl_parent_registration">Parent Registration</string>
    <string name="child_registration">Child Registration</string>
    <string name="parent_registration">Parent Registration</string>
    <string name="email">Email</string>
    <string name="typeRes">TYPE:</string>
    <string name="parentDashText">Parent:</string>
    <string name="create_game">Create Game</string>
    <string name="email_address_username">Email Address / Username</string>
    <string name="game_type">Game Type:</string>
    <string name="select_difficulty">Select Difficulty</string>
    <string name="hard">Hard</string>
    <string name="medium">Medium</string>
    <string name="easy">Easy</string>
</resources>
