<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".choices"

    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="150dp">

                <TextView
                    android:id="@+id/inquiryOne"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionOne"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q5"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_5_questions"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q10"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_10_questions"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/q15"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/_15_questions"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />


            </RadioGroup>


            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="100dp">

                <TextView
                    android:id="@+id/inquiryTwo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/questionTwo"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/qAdd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/addition"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/qSub"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/subtraction"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/qMult"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/multiplication"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="20sp" />

                <RadioButton
                    android:id="@+id/qDiv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/division"
                    android:textSize="20sp" />


            </RadioGroup>

            <Button
                android:id="@+id/subBtn"
                android:layout_width="114dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="150dp"
                android:layout_marginTop="10dp"
                android:text="@string/submit" />


        </LinearLayout>
    </ScrollView>


</LinearLayout>