<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/ic_launcher_background"
    android:padding="15dp"
    tools:context=".MainActivity">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="275dp"
                android:layout_marginTop="10dp"
                app:srcCompat="@drawable/home_logo" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uEmail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email_address_username"
                    android:inputType="textEmailAddress"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="25sp" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/uPass"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:textColor="@color/common_google_signin_btn_text_dark_default"
                    android:textColorHint="@color/common_google_signin_btn_text_dark_default"
                    android:textSize="25sp" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/uLogin"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:text="@string/login"
                android:background="#FFFFFF"
                android:textColor="#8e69ad"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/uReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#FFFFFF"
                android:text="@string/child_registration"
                android:textColor="#8e69ad"
                android:textSize="30sp"
                android:textStyle="bold" />

            <Button
                android:id="@+id/parentReg"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:background="#FFFFFF"
                android:text="@string/parent_registration"
                android:textColor="#8e69ad"
                android:textSize="30sp"
                android:textStyle="bold" />
        </LinearLayout>
    </ScrollView>


</LinearLayout>